--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Coding Challenge 1</title>
 </head>
 <body>
-<h1>Hello World!</h1>
+<h1>Hello World, we are software developers!</h1>
     
 </body>
 </html>
