--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Coding Challenge 1</title>
 </head>
 <body>
-<h1>Hello World, we are software developers!</h1>
+    <h1>Hello World, we are software developers!</h1>
     
+    <main id="main">
+        <h1 id="title">DR. Norman Borlaug</h1>
+        <p>The man who saved a billion lives</p>
+
+    </main>
 </body>
 </html>
