--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
         <h1 id="title">DR. Norman Borlaug</h1>
         <p>The man who saved a billion lives</p>
         <figure id="img-div">
-            <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" 
-            alt="Figure 1">
+            <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg">
+            <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>  
         </figure>
+
+        <section id="tribute-info">
+            <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
+        </section>
 
     </main>
 </body>
